k8s/graph.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: graph
  template:
    metadata:
      labels:
        app: graph
    spec:
      containers:
      - name: graph
        image: graph-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: graph-service
spec:
  type: ClusterIP
  selector:
    app: graph
  ports:
    - port: 5003
      targetPort: 5003
